balionis-k8s1/config/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 8080
      targetPort: 80
  type: ClusterIP
